--- a/yummy-place/component/header.html
+++ b/yummy-place/component/header.html
@@ -1,3 +1,5 @@
 <div>
     <h1><a href="../index.html">념념굿</a></h1>
+    <h1><a href="yummy-place/index.html">념념굿</a></h1>
+    <h1><a href="index.html">념념굿</a></h1>
 </div>
